implemented tests for singleton pattern