@@ -19,15 +19,15 @@ class WatchlistRepositoryTest {
     @BeforeEach
     void setUp() throws ApplicationException {
         List<Movie> dummyMovies = Arrays.asList(
-                new Movie("movie_1_id", "abcdefghijklm", "...", String.valueOf(Arrays.asList("Action")), 2012, "...", 120,
-                        Arrays.asList("Director 1"), Arrays.asList("Writer 1", "Writer 2"),
+                new Movie("movie_1_id", "abcdefghijklm", "...", String.valueOf(List.of("Action")), 2012, "...", 120,
+                        List.of("Director 1"), Arrays.asList("Writer 1", "Writer 2"),
                         Arrays.asList("Actor 1", "Actor 2"), 3.5),
-                new Movie("movie_2_id", "Movie 23333", "...", String.valueOf(Arrays.asList("Comedy")), 2022, "...", 100,
-                        Arrays.asList("Director 2","Director 1"), Arrays.asList("Writer 3"),
+                new Movie("movie_2_id", "Movie 23333", "...", String.valueOf(List.of("Comedy")), 2022, "...", 100,
+                        Arrays.asList("Director 2", "Director 1"), List.of("Writer 3"),
                         Arrays.asList("Actor 2", "Actor 3", "Actor 2"), 4.2),
-                new Movie("movie_3_id", "Movie 322", "...", String.valueOf(Arrays.asList("Drama")), 2004, "...", 90,
-                        Arrays.asList("Director 3"), Arrays.asList("Writer 4"),
-                        Arrays.asList("Actor 1"), 2.8)
+                new Movie("movie_3_id", "Movie 322", "...", String.valueOf(List.of("Drama")), 2004, "...", 90,
+                        List.of("Director 3"), List.of("Writer 4"),
+                        List.of("Actor 1"), 2.8)
         );
 
         movieRepository = new MovieRepository();
@@ -44,6 +44,8 @@ class WatchlistRepositoryTest {
 
     @AfterEach
     void tearDown() throws ApplicationException {
+        MovieRepository.instance = null;
+
         List<WatchlistMovie> watchlistMovies = watchlistRepository.getWatchlist();
         if (watchlistMovies != null) {
             for (WatchlistMovie movie : watchlistMovies) {
@@ -52,6 +54,20 @@ class WatchlistRepositoryTest {
         }
         movieRepository.removeAllMovies();
     }
+
+
+    @Test
+    void testSingletonInstance() throws ApplicationException {
+        // Arrange
+        MovieRepository firstInstance = MovieRepository.getInstance();
+
+        // Act
+        MovieRepository secondInstance = MovieRepository.getInstance();
+
+        // Assert
+        assertSame(firstInstance, secondInstance);
+    }
+
 
     @Test
     void testGetWatchlist() throws ApplicationException {
@@ -65,10 +81,10 @@ class WatchlistRepositoryTest {
     @Test
     void testAddToWatchlist() throws ApplicationException {
         // Arrange
-        Movie newMovie = new Movie("movie_4_id", "Movie 322", "...", String.valueOf(Arrays.asList("Drama")), 2004, "...", 90,
-                Arrays.asList("Director 3"), Arrays.asList("Writer 4"),
-                Arrays.asList("Actor 1"), 2.8);
-        movieRepository.addAllMovies(Arrays.asList(newMovie));
+        Movie newMovie = new Movie("movie_4_id", "Movie 322", "...", String.valueOf(List.of("Drama")), 2004, "...", 90,
+                List.of("Director 3"), List.of("Writer 4"),
+                List.of("Actor 1"), 2.8);
+        movieRepository.addAllMovies(List.of(newMovie));
 
         WatchlistMovie newWatchlistMovie = new WatchlistMovie();
         newWatchlistMovie.setMovie(newMovie);
